[package]
name = "cathode8"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
base64 = "0.22"
cpal = "0.15"
eframe = "0.31"
quick-xml = "0.38"
rfd = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha1 = "0.10"

[[bin]]
name = "cathode8_debug"
path = "src/bin/debugger.rs"
